# wolfe

./: .gitignore  Cargo.toml  README.md
docs/: ingestion-diagram.md  science-corpus-enrichment-plan.md
scripts/: embed.py  jina_embeddings_service.py
src/: main.rs
