[package]
name = "wolfe"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "57.2"
arrow-schema = "57.2"
clap = { version = "4.5.18", features = ["derive"] }
futures = "0.3"
lancedb = "0.27"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
